--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -67,49 +67,75 @@ $(function(){
 </div>
 <div id="detail_tab_contents">
 <div class="tab_contents organizations_people">
-	<a href="#" class="add_new_person_btn mycelium_btn">Add a Person</a>
-	<div class="add_person_container">
-	<div id="search_for_person">
-		<section_title>Add a Person</section_title>
-		<instructions>Search for someone in GoodCloud, or add someone new.</instructions>
-		<input type="search" results=5 name="new_person_name" id="id_search_new_person" placeholder="Search by name, email, or phone number" results_url="{% url people:add_person_via_organization_search_results %}">
-		<fragment name="new_person_search_results" action="replace">
-			{% include "people/_add_person_to_org_results.html" %}
-		</fragment>
-	</div>
+	<tabbed_box class="with_button closed" name="add_a_person">
+		<tab_title>
+			<icon></icon>
+			<text>Add a Person</text>
+		</tab_title>
+		<box_content>
+			
+		
+			{# <a href="#" class="add_new_person_btn mycelium_btn">Add a Person</a> #}
+	
+			<pane name="1" class="pane_1">
+			<div id="search_for_person">
+				{# <section_title>Add a Person</section_title> #}
+				<instructions>Who do you want to add?</instructions>
+				<input type="search" {# results=5 #} name="new_person_name" id="id_search_new_person" placeholder="Type the name of the person you want to add..." results_url="{% url people:add_person_via_organization_search_results %}">
+				<fragment name="new_person_search_results" action="replace">
+					{# {% include "people/_add_person_to_org_results.html" %} #}
+				</fragment>
+			</div>
+			</pane>
+			
+			<pane name="2" class="pane_2">
+			<div id="add_existing_person">
+				<a href="#" id="up_to_search">Back to Search</a>
+				<section_title>Role Details</section_title>		
+				<form action="{% url people:existing_person_via_organization org.pk %}" method="POST">{% csrf_token %}
+					<span class="edit_mode_on">
+					<input type="hidden" name="person_pk" value=""/>
+					<span class="full_name"></span>
+					{% generic_editable_field form_employee.role %}
+					{% generic_editable_field form_employee.email %}
+					{% generic_editable_field form_employee.phone_number %}
+					</span>
+				<form_actions>
+					<input type="submit" class="mycelium_btn" value="Add this Person"/>
+				</form_actions>
+				</form>
+				<box_close>
+					<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
+				</box_close>
+				
+			</div>
+			<div id="new_person">
+				<a href="#" id="up_to_search">Back to Search</a>
+				<section_title>New Person Details</section_title>
+				<form action="{% url people:new_person_via_organization org.pk %}" method="POST">{% csrf_token %}
+					<span class="edit_mode_on">
+					{% generic_editable_field form_new_person.first_name %}
+					{% generic_editable_field form_new_person.last_name %}
 
-	<div id="add_existing_person">
-		<section_title>Role Details</section_title>		
-		<form action="{% url people:existing_person_via_organization org.pk %}" method="POST">{% csrf_token %}
-			<span class="edit_mode_on">
-			<input type="hidden" name="person_pk" value=""/>
-			<span class="full_name"></span>
-			{% generic_editable_field form_employee.role %}
-			{% generic_editable_field form_employee.email %}
-			{% generic_editable_field form_employee.phone_number %}
-			</span>
-		<form_actions>
-			<input type="submit" class="mycelium_btn" value="Add Person"/>
-		</form_actions>
-		</form>
-	</div>
-	<div id="new_person">
-		<section_title>Role Details</section_title>
-		<form action="{% url people:new_person_via_organization org.pk %}" method="POST">{% csrf_token %}
-			<span class="edit_mode_on">
-			{% generic_editable_field form_new_person.first_name %}
-			{% generic_editable_field form_new_person.last_name %}
+					{% generic_editable_field form_employee.role %}
+					{% generic_editable_field form_employee.email %}
+					{% generic_editable_field form_employee.phone_number %}
+					</span>
+				<form_actions>
+					<input type="submit" class="mycelium_btn" value="Add this Person"/>
+				</form_actions>
+				</form>
+				<box_close>
+					<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
+				</box_close>
 
-			{% generic_editable_field form_employee.role %}
-			{% generic_editable_field form_employee.email %}
-			{% generic_editable_field form_employee.phone_number %}
-			</span>
-		<form_actions>
-			<input type="submit" class="mycelium_btn" value="Add Person"/>
-		</form_actions>
-		</form>
-	</div>
-	</div>
+			</div>
+			</pane>
+			<box_close>
+				<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
+			</box_close>
+		</box_content>
+	</tabbed_box>
 	<employees>
 	{% for e in org.employees.all %}
 	<employee>
