making the search field pop

--- a/media/css/people.css
+++ b/media/css/people.css
@@ -25,7 +25,7 @@ breadcrumb {
 	background-position: 8px 8px;
 	background-repeat: no-repeat;
 	outline-style:none;
-	background-color: #FFF;
+	background-color: #F8F8F8;
 	
 	border-radius: 20px;
 	-moz-border-radius: 20px;
