--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -29,10 +29,12 @@ $(function(){
 		</div>
 	</div>
 		<tabbed_box class="open" name="home">
+			<tab_title_container>
 			<tab_title>
 				<icon class="home"></icon>
 				<text>Home</text>
 			</tab_title>
+			</tab_title_container>
 			<box_content>
 				{% generic_editable_field form.phone_number %}
 				{% generic_editable_field_email form.email %}
