--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -284,21 +284,37 @@ fragment {
 tabbed_box {
 	display: block;
 	position: relative;	
+	overflow: visible;
+}
+tabbed_box tab_title_container {
+	display: block;
+	width: 100%;
+	margin: 0px;
+	height: 34px;
+	position: relative;
 }
 tabbed_box tab_title {
 	display: block;
 	float: left;
-	clear: both;
-	top: 0px;
-	left: 0px;
-	font-size: 18px;
-	padding: 5px 11px;
+	border: 1px solid #999;
+	border-top-left-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-webkit-border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	-moz-border-radius-topright: 4px;
+	-webkit-border-top-right-radius: 4px;
+
 	text-decoration: none;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	cursor: pointer;	
+	background-color: #F8F8F8;
+	color: #0355aa;
+	border-bottom: 1px solid #FFF;
+	font-size: 18px;
+	margin: 0px;
+	padding: 5px 11px 3px 11px;
+	cursor: pointer;
 	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+	position: absolute;
+	bottom: -1px;
 }
 tabbed_box.open tab_title {
 	border-bottom-left-radius: 0px;
@@ -324,25 +340,26 @@ tabbed_box tab_title icon {
 	float: left;
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
-	width: 25px;
+	width: 24px;
 	height: 22px;
-	margin-right: 5px;
+	margin-right: 3px;
 }
 tabbed_box tab_title icon.home {
 	background-image: url("../images/icon-home-22h.png");	
-	background-position: 1px 0px;
+	background-position: 0px 2px;
 }
 tabbed_box tab_title icon.company {
 	background-image: url("../images/icon-business-grey-22h.png");	
 	background-position: 3px 2px;
 }
 tabbed_box tab_title text {
-	
+	float:right;
+	padding-top: 2px;
 }
 tabbed_box box_content {
 	display: block;
-	clear: both;
 	width: 96%;
+	margin: 0px;
 	border: 1px solid #DDD;
 	border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -353,9 +370,10 @@ tabbed_box box_content {
 	
 	background-color: #EEE;
 	padding: 10px 2%;
-	position: relative;
+
 	min-height: 60px;
-	overflow: hidden;
+	overflow: auto;
+	
 }
 tabbed_box.with_button.closed box_content {
 	display: none;
@@ -370,4 +388,3 @@ tabbed_box box_close {
 	right: 20px;
 	z-index: 200;
 }
-
