--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -68,10 +68,12 @@ $(function(){
 <div id="detail_tab_contents">
 <div class="tab_contents organizations_people">
 	<tabbed_box class="with_button closed" name="add_a_person">
+		<tab_title_container>	
 		<tab_title>
-			<icon></icon>
+			{# <icon></icon> #}
 			<text>Add a Person</text>
 		</tab_title>
+		</tab_title_container>
 		<box_content>
 			
 		
@@ -104,9 +106,9 @@ $(function(){
 					<input type="submit" class="mycelium_btn" value="Add this Person"/>
 				</form_actions>
 				</form>
-				<box_close>
-					<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
-				</box_close>
+				{# <box_close> #}
+				{# 	<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a> #}
+				{# </box_close> #}
 				
 			</div>
 			<div id="new_person">
@@ -125,9 +127,9 @@ $(function(){
 					<input type="submit" class="mycelium_btn" value="Add this Person"/>
 				</form_actions>
 				</form>
-				<box_close>
-					<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
-				</box_close>
+				{# <box_close> #}
+				{# 	<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a> #}
+				{# </box_close> #}
 
 			</div>
 			</pane>
