--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -297,12 +297,8 @@ tabbed_box tab_title {
 	display: block;
 	float: left;
 	border: 1px solid #999;
-	border-top-left-radius: 4px;
-	-moz-border-radius-topleft: 4px;
-	-webkit-border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-webkit-border-top-right-radius: 4px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
 
 	text-decoration: none;
 	background-color: #F8F8F8;
@@ -328,6 +324,8 @@ tabbed_box.with_button tab_title {
 	border: 1px solid #004486;
 	background-color: #004486;
 	color: #FFF;
+	padding: 5px 11px;
+	cursor: pointer;
 }
 tabbed_box.with_button.open tab_title {
 	background-color: #3E9CFD;
