--- a/media/css/people_organizations.css
+++ b/media/css/people_organizations.css
@@ -47,6 +47,7 @@ employees {
 	padding: 10px 0px;
 	width: 100%;
 	overflow: auto;
+	position: relative;
 }
 employees employee {
 	display: block;
@@ -54,8 +55,9 @@ employees employee {
 	padding: 10px 1%;
 	margin: 1%;
 	float: left;
-	height: 100px;
+	min-height: 100px;
 	border: 1px solid #DDD;
+	position: relative;
 }
 employees employee span {
 	display: block;
