marketing site email signup now appends to the URL, to make it easier to spot in the logs

--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -65,8 +65,7 @@ function rotate_verbs() {
 		</td>
 		<td id="home_right_content">
 			{% placeholder home_content %}
-
-			{% if posted and save_success %}
+			{% if request.GET.save_success == "True" %}
 				<div class="thanks_message">Thanks! We'll keep you posted!</div>
 			{% else %}
 			<form action="" method="POST">{% csrf_token %}
