--- a/media/css/people.css
+++ b/media/css/people.css
@@ -268,6 +268,9 @@ search_results .results_table .best_contact {
 .basic_info .name_phone_email .name .generic_field_label {
 	margin-top: 5px;
 }
+.basic_info .generic_field_label {
+	white-space: nowrap;
+}
 
 .basic_info .name_phone_email .generic_editable_field input {
 	min-width: 30%;
@@ -491,7 +494,6 @@ tabbed_box box_content {
 }
 #basic_info_form.edit_mode_on input { 
 	background-color: #FAFAFA;
-	border-color: #DDD;
 }
 .basic_info tabbed_box[name=job] a {
 	text-decoration: none;
