--- a/mycelium/apps/people/templates/people/_save_status_and_button.html
+++ b/mycelium/apps/people/templates/people/_save_status_and_button.html
@@ -3,16 +3,6 @@
 <a href="#" class="mycelium_btn edit_done_btn " >Done</a>
 <a href="#" class="mycelium_btn save_and_status_btn mycelium_grey" >Saved</a>
 <span class="save_info">
-	<span class="last_save_time">Saved {{form.instance.modified_at|pretty_timesince}}.</span>
-	{# <a href="#" class="mycelium_btn myelium_gray save_now_btn">Save Now</a> #}
+	<span class="last_save_time">Last changed {{form.instance.modified_at|pretty_timesince}}.</span>
 </span>
-{# <span class="switch"> #}
-{# 	<div class="left_label">Edit</div> #}
-{# 	<div class="switch_box off"> #}
-{# 	<div class="left_switch">on</div> #}
-{# 	<div class="right_switch">off</div> #}
-{# 	</div> #}
-{# 	<div class="right_label"></div> #}
-{# </span> #}
-
 </save_status_and_button>
