--- a/mycelium/apps/people/templates/people/_search_result_row_organization.html
+++ b/mycelium/apps/people/templates/people/_search_result_row_organization.html
@@ -1,10 +1,10 @@
-<tr class="result_row person_row striped_row">
+{% load friendly_data_formatting %}<tr class="result_row person_row striped_row">
 	<td class="name">
 		<a href="{% url people:organization obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
-			<span class="highlightable">{{obj.name}}</span>
+			<span class="highlightable">{{obj.full_name}}</span>
 		</a>
 	</td>
 	<td class="email"></td>
-	<td class="phone_number highlightable ">{{obj.primary_phone_number}}</td>
+	<td class="phone_number highlightable ">{{obj.primary_phone_number|clean_none}}</td>
 </tr>
