--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -18,7 +18,7 @@ $(function(){
 {% endblock %}
 {% block breadcrumb_links %}<a href="{% url people:search %}" >Back to All People</a>{% endblock %}
 {% block page_content %}
-<form action="{% url people:person_save_basic person.pk %}" class="edit_mode_off" id="basic_info_form" method="POST">
+<form action="{% url people:person_save_basic person.pk %}" class="edit_mode_off" id="basic_info_form" method="POST">{% csrf_token %}
 {% include "people/_save_status_and_button.html" %}
 
 
@@ -131,6 +131,12 @@ $(function(){
 			<td><a href="#">See details</a></td>
 		</tr>
 		
-	</table>	
+	</table>
 </div>
+<delete_object_block>
+	<form action="{% url people:delete_person %}" method="POST" id="delete_person_form">{% csrf_token %}
+	<input type="hidden" name="person_pk" value="{{form.instance.pk}}">
+	<a href="#" class="mycelium_btn mycelium_active_grey mycelium_delete_btn person_delete_btn" >Delete this Person</a>
+	</form>
+</delete_object_block>
 {% endblock %}
