--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -161,4 +161,11 @@ $(function(){
 	</employees>
 </div>
 </div>
+<delete_object_block>
+	<form action="{% url people:delete_organization %}" method="POST" id="delete_org_form">{% csrf_token %}
+	<input type="hidden" name="org_pk" value="{{form.instance.pk}}">
+	<a href="#" class="mycelium_btn mycelium_active_grey mycelium_delete_btn org_delete_btn" >Delete this Organization</a>
+	</form>
+</delete_object_block>
+
 {% endblock %}
