--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -483,3 +483,22 @@ tag.new_tag .tag_add_btn {
 tag.new_tag .tag_add_btn:hover {
 	background-color: #2669FE;	
 }
+tags form#new_tag_form {
+	position: relative;
+}
+tags search_results {
+	position: fixed;
+	margin-top: 60px;
+	display: block;
+	width: 30%;
+	z-index: 60;
+	background-color: #EEE;
+	background-color: rgba(255,255,255,0.8);
+	border: 1px solid #535FB0;
+	padding: 10px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	display: none;	
+	
+}
