--- a/mycelium/apps/people/templates/people/_new_tag_search_results.html
+++ b/mycelium/apps/people/templates/people/_new_tag_search_results.html
@@ -1,8 +1,14 @@
 {% if q %}
-Similar tags
+<div class="new_tag_list">
+{% if all_tags %}
+<list_title>Similar tags:</list_title>
+<div class="similar_tags">
 {% for t in all_tags %}
-<a href="#" class="tag_suggestion_link">{{t}}</a>
+<a href="#" class="tag_suggestion_link highlightable">{{t}}</a>
 {% endfor %}
+</div>
 {% else %}
-Common tags?
+<list_title>No similar tags found.</list_title>
+{% endif %}
+</div>
 {% endif %}
