--- a/media/css/people.css
+++ b/media/css/people.css
@@ -319,14 +319,15 @@ search_results .results_table .best_contact {
 
 
 
-#detail_tabs {
+detail_tabs {
 	width: 98%;
 	margin: 0px auto;
 	text-align: center;
 	height: 49px;
 	clear: both;
+	display: block;
 }
-#detail_tabs a.detail_tab {
+detail_tabs a.detail_tab {
 	display: block;
 	float: left;
 	border: 1px solid #DDD;
@@ -345,7 +346,7 @@ search_results .results_table .best_contact {
 	color: #BBB;
 	border-bottom-width: 0px;
 }
-#detail_tabs a.detail_tab.current {
+detail_tabs a.detail_tab.current {
 	background-color: #FFF;
 	color: #0355aa;
 	padding: 14px 12px 10px 12px;
@@ -353,10 +354,10 @@ search_results .results_table .best_contact {
 	border-color: #999;
 	border-bottom: 1px solid #FFF;	
 }
-#detail_tab_contents {
+detail_tab_contents {
 	width: 94%;
 	margin: 0px auto;
-		
+
 	display: block;
 	border: 1px solid #999;
 	min-height: 100px;
