better tab switching

--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -106,15 +106,15 @@ $(function(){
 
 
 <detail_tabs update_url="{% url people:tab_contents person.pk %}">
-	<a class="detail_tab current" href="#conversations">Conversations</a>
-	<a class="detail_tab" href="#activity">Activity</a>
+	<a class="detail_tab current" href="#activity">Recent Activity</a>
+	<a class="detail_tab" href="#conversations">Conversations</a>
 	<a class="detail_tab" href="#participant">Participant</a>
 	<a class="detail_tab" href="#volunteer">Volunteer</a>
 	<a class="detail_tab" href="#donor">Donor</a>
 </detail_tabs>
 <detail_tab_contents>
 	<fragment name="detail_tab" action="replace">
-		<div class="detail_header">No Recent Conversations</div>
+		<div class="detail_header">No Recent Activity</div>
 	</fragment>
 </detail_tab_contents>
 <delete_object_block>
