--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -1,4 +1,4 @@
-<div class="detail_header">Recent Volunteer Activity</div>
+<div class="detail_header">Recent Volunteer Activity for {{person}}</div>
 {# add btn #}
 <table class="volunteer_shift_table striped">
 	<tr>
